✨ typesetting fix on mobile, removes blog decal

--- a/styles/_blog.css
+++ b/styles/_blog.css
@@ -120,13 +120,22 @@ header.blog-container {
 
 	.blog-container h1 {
 		max-width: 80vw;
+		font-size: 12vw;
+	}
+
+	.blog-container p {
+		max-width: 70vw;
+	}
+
+	.blog-decal {
+		display: none;
 	}
 
 	.blog-avatar {
 		position: absolute;
-		height: max(10rem, 30vw);
-		width: max(10rem, 30vw);
-		right: -4rem;
+		height: max(9rem, 30vw);
+		width: max(9rem, 30vw);
+		right: -3.4rem;
 	}
 
 	.blog-item-title {
